examples/test/testpolicy12399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12399
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key19: value34
      key2: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value17
      podSelector:
        matchLabels:
          key36: value40
          key38: value39
          key22: value41
